--- a/assets/moji.css
+++ b/assets/moji.css
@@ -84,6 +84,9 @@
 .moji-bch {
     background-image: url("./moji/bch.svg")
 }
+.moji-btc {
+    background-image: url("./moji/btc.svg")
+}
 .moji-xmr {
     background-image: url("./moji/xmr.svg")
 }
