use trans fist sign

--- a/assets/moji.css
+++ b/assets/moji.css
@@ -94,8 +94,8 @@
 .moji-communism {
     background-image: url("./moji/communism.svg")
 }
-.moji-feminism {
-    background-image: url("./moji/feminism.svg")
+.moji-transfist {
+    background-image: url("./moji/transfist.svg")
 }
 .moji-fist {
     background-image: url("./moji/fist.svg")
@@ -105,4 +105,7 @@
 }
 .moji-peace {
     background-image: url("./moji/peace.svg")
+}
+.moji-transfist {
+    background-image: url("./moji/transfist.svg")
 }
